--- a/.env
+++ b/.env
@@ -31,10 +31,10 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=ventesh.hnrtechnologies@gmail.com
-MAIL_PASSWORD=mhtofcwhofgqgjuj
+MAIL_USERNAME=abhishek.hnrtechnologies@gmail.com
+MAIL_PASSWORD=jgagnmileoneqtna
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=ventesh.hnrtechnologies@gmail.com
+MAIL_FROM_ADDRESS=abhishek.hnrtechnologies@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
